fix alignment and font of contact form

--- a/style.css
+++ b/style.css
@@ -24,6 +24,13 @@ body {
   grid-template-columns: minmax(240px, 960px);
 }
 
+form {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 960px;
+  display: grid;
+}
+
 .title > a {
   padding-bottom: 5px;
   color: white;
@@ -37,11 +44,12 @@ body {
   max-height: 100%;
 }
 
-#name { 
+
+#name {  
   width: 100%;
   max-width: 960px;
   border-color: #5a5f73;
-  padding: 5px;
+  padding: 5px 0 5px;
   margin-bottom: 5px;
 }
 
@@ -49,7 +57,7 @@ body {
   width: 100%;
   max-width: 960px;
   border-color: #5a5f73;
-  padding: 5px;
+  padding: 5px 0 5px;
   margin-bottom: 5px;
 }
 
@@ -59,7 +67,12 @@ body {
   border-width: 2px;
   border-style: inset;
   border-color: #5a5f73;
-  padding: 5px;
+  padding: 5px 0 5px;
+}
+
+::placeholder {
+  padding-left: 5px;
+  font-family: Arial;
 }
 
 .send-button {
